# imperative

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  _typos.toml  azure-pipelines.yml  build.rs  release.toml
.cargo/: config.toml
.github/: settings.yml
.github/workflows/: audit.yml  ci.yml  codegen.yml  rust-next.yml
assets/: imperatives_blacklist.txt
codegen/: Cargo.toml  release.toml
codegen/src/: main.rs
data/: imperatives_blacklist.txt
imperative_dev/: Cargo.toml
imperative_dev/src/: codegen.rs  main.rs
src/: checker.rs  lib.rs  wordlist_codegen.rs
tests/: codegen.rs
tests/testsuite/: codegen.rs
