[workspace]
members = ["codegen"]

[package]
name = "imperative"
version = "1.0.2"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Check for imperative mood in text"
repository = "https://github.com/crate-ci/imperative"
documentation = "https://docs.rs/imperative"
readme = "README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"

[badges]
azure-devops = { project = "crate-ci", pipeline = "imperative" }
codecov = { repository = "crate-ci/imperative" }
maintenance = { status = "passively-maintained" }

[dependencies]
rust-stemmers = "1.1.0"
phf = "0.9"
