[workspace]
members = [
  "imperative_dev",
]
default-members = [".", "imperative_dev"]


[package]
name = "imperative"
version = "1.0.3"
description = "Check for imperative mood in text"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/imperative"
documentation = "https://docs.rs/imperative"
readme = "README.md"
categories = ["text-processing"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/imperative/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
rust-stemmers = "1.2.0"
phf = "0.11"
