[workspace]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "imperative"
version = "1.0.5"
description = "Check for imperative mood in text"
authors = ["Ed Page <eopage@gmail.com>"]
repository = "https://github.com/crate-ci/imperative"
documentation = "https://docs.rs/imperative"
readme = "README.md"
categories = ["text-processing"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/imperative/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
rust-stemmers = "1.2.0"
phf = "0.11"

[dev-dependencies]
snapbox = { version = "0.4.12", features = ["path"] }
phf_codegen = "0.11"
rust-stemmers = "1.2.0"
multimap = "0.9.0"
codegenrs = "3.0"
