[package]
name = "imperative-codegen"
version = "1.0.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Check for imperative mood in text"
repository = "https://github.com/crate-ci/imperative"
documentation = "https://docs.rs/imperative"
readme = "README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[badges]
azure-devops = { project = "crate-ci", pipeline = "imperative" }

[dependencies]
phf_codegen = "0.7"
rust-stemmers = "1.1.0"
multimap = "0.6.0"
difference = "2.0.0"
structopt = "0.3"
normalize-line-endings = "0.3.0"
derive_more = "0.15.0"
