[package]
name = "imperative-codegen"
version = "1.0.1"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Check for imperative mood in text"
repository = "https://github.com/crate-ci/imperative"
documentation = "https://docs.rs/imperative"
readme = "README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
phf_codegen = "0.11"
rust-stemmers = "1.1.0"
multimap = "0.8.0"
codegenrs = "2.0"
clap = { version = "3.1.0", features = ["derive"] }
